--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
     "require": {
         "php": "^5.6|^7.0",
 
-        "sylius/mailer": "^0.19",
-        "sylius/resource-bundle": "^0.19",
-        "symfony/framework-bundle": "^2.8"
+        "sylius/mailer": "dev-symfony_3_compatibility",
+        "sylius/resource-bundle": "dev-symfony_3_compatibility",
+        "symfony/framework-bundle": "^3.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
-        "symfony/form": "^2.8",
+        "symfony/form": "^3.0",
         "twig/twig": "^1.0",
         "swiftmailer/swiftmailer": "~5.0"
     },
